# ssl-autoref-evaluation

./: .gitignore  CMakeLists.txt  Makefile  README.md
proto/: logger.proto  referee_wrapper.proto  udp_message_wrapper.proto
src/: evaluate_main.cpp  logger_main.cpp  playback_main.cpp
src/shared/: misc_util.cpp  misc_util.h  netraw.cpp  util.h
